[level 0] Title: 배열 만들기 6, Time: 43.07 ms, Memory: 124 MB -BaekjoonHub